Implemented Settings page, adding the app version and reseed data option. Implemented new edit functionality for ingredients. Refined and fixed matching rules. Made changes to database schema.