@@ -57,7 +57,7 @@ public class MainActivity extends AppCompatActivity {
                     startActivity(new Intent(MainActivity.this, SuggestedRecipesActivity.class));
                     return true;
                 } else if (itemId == R.id.nav_settings) {
-                    Toast.makeText(MainActivity.this, "Settings button works.", Toast.LENGTH_SHORT).show();
+                    startActivity(new Intent(MainActivity.this, SettingsActivity.class)); // Open settings
                     return true;
                 }
                 return false;
@@ -74,14 +74,34 @@ public class MainActivity extends AppCompatActivity {
 
     private void seedInitialData() {
         if (dbHelper.getAllIngredients().isEmpty()) {
+            // Seed initial pantry ingredients
             long flourId = dbHelper.addIngredient(new Ingredient("Flour", 1.5, "kg"));
             long sugarId = dbHelper.addIngredient(new Ingredient("Sugar", 0.5, "kg"));
             long eggId = dbHelper.addIngredient(new Ingredient("Eggs", 12.0, "pcs"));
+            long milkId = dbHelper.addIngredient(new Ingredient("Milk", 1.0, "L"));
+            long butterId = dbHelper.addIngredient(new Ingredient("Butter", 0.25, "kg"));
+            long breadId = dbHelper.addIngredient(new Ingredient("Bread", 1.0, "loaf"));
+            long saltId = dbHelper.addIngredient(new Ingredient("Salt", 0.1, "kg"));
+            long tomatoId = dbHelper.addIngredient(new Ingredient("Tomatoes", 4.0, "pcs"));
+            long garlicId = dbHelper.addIngredient(new Ingredient("Garlic", 3.0, "cloves"));
+            long riceId = dbHelper.addIngredient(new Ingredient("Rice", 2.0, "kg"));
 
-            if (flourId != -1 && sugarId != -1) {
-                Recipe pancakeRecipe = new Recipe("Pancakes", "Mix ingredients and fry on medium heat until golden brown.");
-                dbHelper.addRecipe(pancakeRecipe, Arrays.asList(flourId, sugarId, eggId));
-            }
+            // Seed initial Recipes
+            dbHelper.addRecipe(new Recipe("Pancakes", "Mix ingredients and fry on medium heat until golden brown."), Arrays.asList(flourId, sugarId, eggId, milkId));
+            dbHelper.addRecipe(new Recipe("Egg Omelette", "Start by to whisk eggs with a pinch of salt, then cook on a warm pan with oil."), Arrays.asList(eggId, saltId));
+            dbHelper.addRecipe(new Recipe("Scrambled Eggs", "Begin by stirring eggs continuously in a melted buttered pan over medium heat."), Arrays.asList(eggId, butterId, saltId));
+            dbHelper.addRecipe(new Recipe("French Toast", "Whisk the egg and milk, dip bread and fry"), Arrays.asList(breadId, eggId, milkId, butterId));
+            dbHelper.addRecipe(new Recipe("Sweet Cookies", "Cream butter and sugar, add flour, shape cookies, and bake."), Arrays.asList(flourId, sugarId, butterId));
+            dbHelper.addRecipe(new Recipe("Standard Boiled Eggs", "Place eggs in boiling water, cool in cold water, peel."), List.of(eggId));
+            dbHelper.addRecipe(new Recipe("Garlic Toast Bread", "Melt butter with garlic, spread over bread and toast."), Arrays.asList(breadId, butterId, garlicId));
+            dbHelper.addRecipe(new Recipe("Fried Bread in a Pan", "Melt butter on a hot pan and fry."), Arrays.asList(breadId, butterId));
+            dbHelper.addRecipe(new Recipe("Sweet Milk", "Whisk flour, eggs, and milk, fry and spread sugar."), Arrays.asList(flourId, eggId, milkId, sugarId));
+            dbHelper.addRecipe(new Recipe("Rice Pudding", "Cooked rice with milk plus sugar slow until ready."), Arrays.asList(riceId, milkId, sugarId));
+            dbHelper.addRecipe(new Recipe("Garlic Rice", "Add garlic to butter - put in cooked rice, throw salt on."), Arrays.asList(riceId, garlicId, butterId, saltId));
+            dbHelper.addRecipe(new Recipe("Tomato Garlic as a Sauce", "Add garlic, add tomatoes with salt."), Arrays.asList(tomatoId, garlicId, saltId));
+            dbHelper.addRecipe(new Recipe("Egg base with Tomatoes", "Add tomatoes and whisk with eggs with salt."), Arrays.asList(eggId, tomatoId, saltId));
+            dbHelper.addRecipe(new Recipe("Rice and Egg", "Add rice to eggs and butter with salt."), Arrays.asList(riceId, eggId, butterId, saltId));
+            dbHelper.addRecipe(new Recipe("Pudding with Bread", "Add bread and soak in milk and egg, then bake."), Arrays.asList(breadId, milkId, eggId, sugarId));
         }
     }
 
